--- a/api/package.json
+++ b/api/package.json
@@ -1,25 +1,32 @@
 {
-  "name": "api",
-  "version": "1.0.0",
-  "description": "This project was bootstrapped with Fastify-CLI.",
-  "main": "app.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "test": "node --test test/**/*.test.js",
-    "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
-  },
-  "keywords": [],
-  "author": "yu ganghyeon",
-  "license": "ISC",
-  "dependencies": {
-    "fastify": "^5.0.0",
-    "fastify-plugin": "^5.0.0",
-    "@fastify/autoload": "^6.0.0",
-    "@fastify/sensible": "^6.0.0",
-    "fastify-cli": "^7.4.0"
-  },
-  "devDependencies": {}
+    "name": "api",
+    "version": "1.0.0",
+    "description": "SimSaaS API Server",
+    "main": "dist/index.js",
+    "scripts": {
+        "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+        "build": "tsc",
+        "start": "node dist/index.js",
+        "lint": "eslint . --ext .ts"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@fastify/cors": "^9.0.1",
+        "@prisma/client": "6.7.0",
+        "@trpc/server": "^10.45.2",
+        "dotenv": "^16.5.0",
+        "fastify": "^4.29.1",
+        "zod": "^3.24.4"
+    },
+    "devDependencies": {
+        "@types/node": "^20.17.46",
+        "eslint": "^8.57.1",
+        "pino-pretty": "^13.0.0",
+        "prisma": "5.22.0",
+        "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.2.0",
+        "typescript": "^5.8.3"
+    }
 }
