--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "SimSaaS API Server",
     "main": "dist/index.js",
+    "types": "dist/router.d.ts",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
         "build": "tsc",
@@ -14,7 +15,7 @@
     "license": "ISC",
     "dependencies": {
         "@fastify/cors": "^9.0.1",
-        "@prisma/client": "6.7.0",
+        "@prisma/client": "^5.22.0",
         "@trpc/server": "^10.45.2",
         "dotenv": "^16.5.0",
         "fastify": "^4.29.1",
