--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -20,7 +20,12 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Paths */
+    "paths": {
+      "@api/*": ["../api/src/*"]
+    }
   },
   "include": ["src"]
 }
