--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-  "name": "simsaas",
-  "version": "1.0.0",
-  "description": "",
-  "main": "script.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "yu ganghyeon",
-  "license": "ISC",
-  "packageManager": "pnpm@10.8.1",
-  "devDependencies": {
-    "@types/node": "^22.15.17",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
-    "eslint": "^9.25.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
-  }
+    "name": "simsaas",
+    "version": "1.0.0",
+    "description": "SimSaaS 프로젝트 모노레포",
+    "main": "script.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "api": "pnpm --filter api",
+        "cli": "pnpm --filter cli",
+        "prisma": "pnpm --filter prisma",
+        "lint": "pnpm -r lint"
+    },
+    "keywords": [],
+    "author": "yu ganghyeon",
+    "license": "ISC",
+    "packageManager": "pnpm@10.8.1",
+    "devDependencies": {
+        "@types/node": "^20.17.46",
+        "@typescript-eslint/eslint-plugin": "^8.32.0",
+        "@typescript-eslint/parser": "^8.32.0",
+        "eslint": "^9.25.0",
+        "ts-node-dev": "^2.0.0",
+        "typescript": "^5.8.3",
+        "prisma": "^5.22.0"
+    }
 }
