--- a/cli/tsconfig.json
+++ b/cli/tsconfig.json
@@ -8,10 +8,8 @@
     "baseUrl": "./src",
     "paths": {
       "@/*": ["src/*"]
-    },
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
