--- a/cli/package.json
+++ b/cli/package.json
@@ -2,7 +2,6 @@
     "name": "cli",
     "version": "0.1.0",
     "description": "SimSaaS cli",
-    "type": "module",
     "main": "dist/index.js",
     "bin": {
         "simsaas-cli": "./dist/index.js"
@@ -17,9 +16,9 @@
     "keywords": [],
     "dependencies": {
         "@trpc/client": "^10.45.2",
-        "api": "workspace:^",
+        "api": "workspace:*",
         "commander": "^12.1.0",
-        "dotenv": "^16.4.5"
+        "dotenv": "^16.5.0"
     },
     "devDependencies": {
         "@types/commander": "^2.5.0",
