--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
     "types": "dist/index.d.ts",
     "scripts": {
         "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-        "build": "tsc",
+        "build": "tsc && tsc-alias",
         "start": "node dist/index.js",
         "lint": "eslint . --ext .ts"
     },
