--- a/cli/package.json
+++ b/cli/package.json
@@ -8,7 +8,7 @@
     },
     "scripts": {
         "dev": "tsx src/index.ts",
-        "build": "tsc",
+        "build": "tsc && tsc-alias",
         "start": "node dist/index.js",
         "lint": "eslint . --ext .ts",
         "cli": "node dist/index.js"
