--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@typescript-eslint/eslint-plugin": "^8.32.0",
         "@typescript-eslint/parser": "^8.32.0",
         "eslint": "^9.25.0",
+        "tsc-alias": "^1.8.16",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.8.3",
         "prisma": "^5.22.0"
