--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
         "@trpc/server": "^10.45.2",
         "dotenv": "^16.5.0",
         "fastify": "^4.29.1",
+        "superjson": "1.13.3",
         "zod": "^3.24.4"
     },
     "devDependencies": {
