--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -3,7 +3,12 @@ services:
     image: postgres:16-alpine
     environment:
       POSTGRES_PASSWORD: postgres
-    ports: ['5432:5432']
-    volumes: ['db:/var/lib/postgresql/data']
+    ports: ['5432:5432'] # 외부 포트 5432와 컨테이너 포트 5432 연결
+    volumes: ['db:/var/lib/postgresql/data'] # 데이터 지속성을 위한 볼륨 연결
+  redis:
+    image: redis:7-alpine
+    ports: ['6379:6379'] # 외부 포트 6379와 컨테이너 포트 6379 연결
+    volumes: ['redis-data:/data'] # Redis 데이터 지속성을 위한 볼륨 추가
 volumes:
   db:
+  redis-data:
