--- a/api/package.json
+++ b/api/package.json
@@ -14,8 +14,10 @@
         "@fastify/cors": "^9.0.1",
         "@prisma/client": "^5.22.0",
         "@trpc/server": "^10.45.2",
+        "bullmq": "^5.52.2",
         "dotenv": "^16.5.0",
         "fastify": "^4.29.1",
+        "ioredis": "^5.6.1",
         "superjson": "1.13.3",
         "zod": "^3.24.4"
     },
