--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
         "bullmq": "^5.52.2",
         "dotenv": "^16.5.0",
         "fastify": "^4.29.1",
+        "fastify-plugin": "^5.0.1",
         "ioredis": "^5.6.1",
         "superjson": "1.13.3",
         "zod": "^3.24.4"
