--- a/prisma/package.json
+++ b/prisma/package.json
@@ -11,5 +11,8 @@
     "license": "ISC",
     "dependencies": {
         "@prisma/client": "^5.22.0"
+    },
+    "devDependencies": {
+        "prisma": "^5.22.0"
     }
 }
